fix: color more readable in gallery figure

--- a/sass/skins/aendu.scss
+++ b/sass/skins/aendu.scss
@@ -62,7 +62,7 @@
   figcaption {
     margin-top: 0.5em;
     font-size: 0.9em;
-    color: #666;
+    color: #b3b3b3;
     text-align: center;
   }
 }
